# NotesPortal

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml  docker-compose.yaml
backend/configuration/: config.yaml
backend/migrations/2023-08-30-063925_create_users/: up.sql
backend/migrations/2023-08-30-063933_create_posts/: up.sql
backend/migrations/2023-09-06-150553_important_posts/: down.sql  up.sql
backend/src/: errors.rs  logging.rs  main.rs
backend/src/app/: configuration.rs  handlers.rs  mod.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs
backend/src/db/: functionality.rs  mod.rs  models.rs  schema.rs
backend/src/schema/: form.rs  jwt.rs  mod.rs  post.rs  user.rs
common/: Cargo.toml
common/src/: errors.rs  forms.rs  lib.rs  posts.rs  user.rs
frontend/: .env  Cargo.toml  index.html
frontend/src/: api.rs  app.rs  main.rs  routes.rs
frontend/src/api/: mod.rs
frontend/src/components/: alert.rs  authorizationform.rs  list_erors.rs  mod.rs  postitem.rs  posts_list.rs  switchbutton.rs
frontend/src/components/auth/: form.rs  logout.rs  mod.rs  types.rs
frontend/src/components/posts/: mod.rs  postform.rs  postitem.rs  posts_list.rs  types.rs
frontend/styles/: alert.scss  errors.scss  form.scss  index.scss  posts.scss
