[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15.0"
actix-web = "4.4.0"
tokio = "1.32.0"

diesel = { version = "2.1.0", features = ["postgres","postgres_backend","r2d2","time","uuid"] }
r2d2 = "0.8.10"


uuid={version="1.3.0",features=["serde","v4","fast-rng"]}
time={version="0.3.20",features=["serde"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

config = "0.13.3"


tracing={version="0.1.37",features=["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter","json"] }
tracing-log="0.1.3"
argon2 = "0.5.1"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
regex = "1.9.4"





