[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
common={path = "../common", version ="0.1.0"}

log = "0.4.20"
reqwasm = "0.5.0"

serde_json = "1.0.105"

wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"

