[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"

dotenv = "0.15.0"
log = "0.4.20"

serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }

common={ version ="0.1.0",path = "../common"}
reqwest = {version="0.11.20",features = ["json"]}


wasm-logger = "0.2.0"
web-sys = "0.3.64"
once_cell = "1.18.0"






